# UVSplatform

./: .gitignore  Dockerfile  README.md
backend/: package-lock.json  package.json
backend/mission_manager/: package-lock.json  package.json
backend/mission_manager/src/: app.js  config.js  database.js  firebase_middleware.js  index.js
backend/mission_manager/src/controllers/: missionController.js
backend/mission_manager/src/models/: Mission.js  MissionPlan.js
backend/mission_manager/src/routes/: missions.routes.js
backend/src/: app.js  index.js
backend/src/controllers/: missionController.js
backend/src/routes/: index.js  missions.routes.js
backend/vehicle_manager/: package-lock.json  package.json
backend/vehicle_manager/src/: app.js  config.js  database.js  fleets_interface.js  index.js
backend/vehicle_manager/src/controllers/: vehiclesController.js
ros2_modules/uvs_fleet_manager/: CMakeLists.txt  package.xml
ros2_modules/uvs_fleet_manager/src/: fleet_manager.cpp
ros2_modules/uvs_pkg/: CMakeLists.txt  package.xml
ros2_modules/uvs_pkg/src/: uvs_controller.cpp
uvsp_app/: README.md  pubspec.yaml
uvsp_app/android/app/: build.gradle  google-services.json
uvsp_app/ios/: firebase_app_id_file.json
uvsp_app/ios/Runner/: Info.plist
uvsp_app/ios/Runner.xcodeproj/: project.pbxproj
uvsp_app/lib/: main.dart
uvsp_app/lib/forms/: form_login.dart  form_reset_password.dart  form_signup.dart  form_validators.dart
uvsp_app/lib/models/: MissionPlan.dart  Vehicle.dart
uvsp_app/lib/screens/: home_screen.dart  login_screen.dart  request_mission_screen.dart  reset_password_screen.dart  signup_screen.dart
uvsp_app/lib/services/: http_service.dart
uvsp_app/lib/utils/: constants.dart
uvsp_app/lib/widgets/: list_missions.dart  list_vehicles.dart
uvsp_app/test/: widget_test.dart
(+6 files in other folders)
